# renovate

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  _typos.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
docs/: architecture.md
examples/: config.rs  glob.rs  parse.rs  schema.rs
fixtures/: simple.sql
fixtures/config/: test.yml
fixtures/db/: foreign_keys.sql
fixtures/db/tenant/: schema.sql
fixtures/db/tenant/tables/: tenants.sql
fixtures/db/user/tables/: users.sql
fixtures/db1/user/: schema.sql
fixtures/db1/user/functions/: auth_uid.sql
fixtures/samples/: comment.sql  enum.sql  extension.sql  fk.sql  function.sql  grant.sql  grant_all.sql  index.sql  mview.sql  owner_to.sql  pk.sql  policy.sql  revoke.sql  rls.sql  sequence.sql  set_default.sql  table.sql  trigger.sql  type.sql  view.sql
rfcs/: 0001-sql-migration.md  0002-rewrite-create-table.md  template.md
src/: config.rs  lib.rs  macros.rs  main.rs  repo.rs  schema.rs  utils.rs
src/cli/: mod.rs
src/commands/: mod.rs
src/commands/generate/: completion.rs  mod.rs
src/commands/pg/: apply.rs  fetch.rs  init.rs  mod.rs  plan.rs
src/commands/schema/: apply.rs  fetch.rs  init.rs  mod.rs  normalize.rs  plan.rs
src/parser/: alter_table.rs  composite_type.rs  constraint.rs  enum_type.rs  function.rs  id.rs  index.rs  mod.rs  mview.rs  privilege.rs  sequence.rs  table.rs  table_constraint.rs  table_owner.rs  table_rls.rs  trigger.rs  utils.rs  view.rs
src/parser/privilege/: mod.rs  single_priv.rs
src/parser/table/: alter_table.rs  column.rs  mod.rs  table_constraint.rs  table_index.rs  table_owner.rs  table_policy.rs  table_rls.rs  table_sequence.rs  table_trigger.rs
src/parser/table/column/: constraint_info.rs  mod.rs
src/parser/utils/: macros.rs  mod.rs  node.rs  parsec.rs
src/repo/: applier.rs  git.rs  loader.rs  mod.rs  saver.rs
src/types/: differ.rs  mod.rs  node_delta.rs  relation_id.rs  schema_id.rs  sql_diff.rs
tests/: cli_tests.rs
tests/cmd/: help.toml  help_schema.toml  init.toml  normalize.toml  plan.toml
tests/cmd/normalize.in/: renovate.yml  test.sql
tests/cmd/normalize.out/: renovate.yml
tests/cmd/normalize.out/public/: 04_tables.sql
tests/cmd/plan.in/: test.sql
