[package]
name = "renovate"
version = "0.1.0"
edition = "2021"

[lib]
name = "renovate"
path = "src/lib.rs"

[[bin]]
name = "renovate"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["clap"]


[dependencies]
anyhow = "1.0.66"
async-process = "1.6.0"
async-trait = "0.1.59"
clap = { version = "4.0.29", features = ["derive"], optional = true }
console = "0.15.2"
derivative = "2.2.0"
git2 = { version = "0.15.0", default-features = false }
glob = "0.3.0"
itertools = "0.10.5"
nom = "7.1.1"
pg_query = { version = "0.7.0", git = "https://github.com/pganalyze/pg_query.rs" }
serde = { version = "1.0.148", features = ["derive"] }
serde_yaml = "0.9.14"
similar = { version = "2.2.1", features = ["inline"] }
sqlformat = "0.2.0"
tokio = { version = "1.22.0", features = ["fs", "rt", "macros", "rt-multi-thread", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
