[package]
name = "renovate"
version = "0.2.6"
edition = "2021"

[lib]
name = "renovate"
path = "src/lib.rs"

[[bin]]
name = "renovate"
path = "src/main.rs"

[features]
default = ["cli"]
cli = ["clap-utils"]


[dependencies]
anyhow = "1.0.68"
async-process = "1.6.0"
async-trait = "0.1.60"
atty = "0.2.14"
clap-utils = { version = "0.3.0", features = ["highlight"], optional = true }
console = "0.15.4"
derivative = "2.2.0"
git2 = { version = "0.15.0", default-features = false }
glob = "0.3.0"
itertools = "0.10.5"
nom = "7.1.2"
pg_query = { version = "0.7.0", git = "https://github.com/pganalyze/pg_query.rs" }
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
similar = { version = "2.2.1", features = ["inline"] }
sqlformat = "0.2.0"
sqlx = { version = "0.6.2", features = ["postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.23.1", features = ["fs", "rt", "macros", "rt-multi-thread", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"

[dev-dependencies]
tempfile = "3.3.0"
